Fix issues where the formatted input box would not wrap correctly.

--- a/client/assets/css/chat-box.css
+++ b/client/assets/css/chat-box.css
@@ -16,6 +16,7 @@
   order: 0;
 }
 
+/* Chat area */
 .chat-box-column:nth-child(2) {
   display: block;
   flex-grow: 1;
@@ -23,6 +24,7 @@
   flex-basis: auto;
   align-self: auto;
   order: 0;
+  overflow-x: hidden;
 }
 
 .chat-box-column:nth-child(3) {
